--- a/css/styles.css
+++ b/css/styles.css
@@ -36,8 +36,8 @@ Colors:
 - Backgrounds - light gray #fbfbfb
 - Background - dark blue #153e52
 - Backgrounds navbar, footer - dark gray #113448
-- Buttons, bullets, icons - green #14bf98
-- Headings text - black #484a46
+- Buttons, bullets, icons - green #908f8d
+- Headings text - black #79736e
 - Body text - gray #787976
 - Body text - light gray #dfe5ec
 ******************************************/
@@ -79,32 +79,32 @@ body, p {
 }
 
 h1 {
-	color: #484a46;
+	color: #79736e;
 	font: 700 2.5rem/3rem "Montserrat", sans-serif;
 }
 
 h2 {
-	color: #484a46;
+	color: #79736e;
 	font: 700 1.75rem/2.125rem "Montserrat", sans-serif;
 }
 
 h3 {
-	color: #484a46;
+	color: #79736e;
 	font: 700 1.375rem/1.75rem "Montserrat", sans-serif;
 }
 
 h4 {
-	color: #484a46;
+	color: #79736e;
 	font: 700 1.25rem/1.625rem "Montserrat", sans-serif;
 }
 
 h5 {
-	color: #484a46;
+	color: #79736e;
 	font: 700 1.125rem/1.5rem "Montserrat", sans-serif;
 }
 
 h6 {
-	color: #484a46;
+	color: #79736e;
 	font: 700 1rem/1.375rem "Montserrat", sans-serif;
 }
 
@@ -119,7 +119,7 @@ a:hover {
 }
 
 a.green {
-	color: #14bf98;
+	color: #908f8d;
 }
 
 a.white,
@@ -136,20 +136,20 @@ a.white,
 }
 
 strong {
-	color: #484a46;
+	color: #79736e;
 }
 
 .section-title {
-	color: #14bf98;
+	color: #908f8d;
 	font: 500 0.8125rem/1.125rem "Montserrat", sans-serif;
 }
 
 .btn-solid-reg {
 	display: inline-block;
 	padding: 1.1875rem 1.875rem 1.1875rem 1.875rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid #908f8d;
 	border-radius: 0.25rem;
-	background-color: #14bf98;
+	background-color: #908f8d;
 	color: #fff;
 	font: 700 0.75rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
@@ -158,16 +158,16 @@ strong {
 
 .btn-solid-reg:hover {
 	background-color: transparent;
-	color: #14bf98;
+	color: #908f8d;
 	text-decoration: none;
 }
 
 .btn-solid-lg {
 	display: inline-block;
 	padding: 1.375rem 2.125rem 1.375rem 2.125rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid #908f8d;
 	border-radius: 0.25rem;
-	background-color: #14bf98;
+	background-color: #908f8d;
 	color: #fff;
 	font: 700 0.75rem/0 "Montserrat", sans-serif;
 	text-decoration: none;
@@ -176,7 +176,7 @@ strong {
 
 .btn-solid-lg:hover {
 	background-color: transparent;
-	color: #14bf98;
+	color: #908f8d;
 	text-decoration: none;
 }
 
@@ -377,9 +377,9 @@ input[type='checkbox'] {
 	display: inline-block;
 	width: 100%;
 	height: 3.125rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid #908f8d;
 	border-radius: 0.25rem;
-	background-color: #14bf98;
+	background-color: #908f8d;
 	color: #fff;
 	font: 700 0.75rem/1.75rem "Montserrat", sans-serif;
 	cursor: pointer;
@@ -388,7 +388,7 @@ input[type='checkbox'] {
 
 .form-control-submit-button:hover {
 	background-color: transparent;
-	color: #14bf98;
+	color: #908f8d;
 }
 
 /* Form Success And Error Message Formatting */
@@ -682,7 +682,7 @@ input[type='checkbox'] {
 
 .navbar-custom .nav-item .nav-link:hover,
 .navbar-custom .nav-item .nav-link.active {
-	color: #14bf98;
+	color: #908f8d;
 }
 
 /* Dropdown Menu */
@@ -727,7 +727,7 @@ input[type='checkbox'] {
 }
 
 .navbar-custom .dropdown-item:hover .item-text {
-	color: #14bf98;
+	color: #908f8d;
 }
 
 .navbar-custom .dropdown-items-divide-hr {
@@ -823,7 +823,7 @@ input[type='checkbox'] {
 }
 
 .basic-1 .testimonial-author {
-	color: #484a46;
+	color: #79736e;
 }
 
 /* Hover Animation */
@@ -940,7 +940,7 @@ input[type='checkbox'] {
 }
 
 .cards-2 .list-unstyled .fas {
-	color: #14bf98;
+	color: #908f8d;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -951,13 +951,13 @@ input[type='checkbox'] {
 
 .cards-2 .price {
 	margin-bottom: 0.25rem;
-	color: #484a46;
+	color: #79736e;
 	font: 700 1rem/1.5rem "Montserrat", sans-serif;
 	text-align: center;
 }
 
 .cards-2 .price span {
-	color: #14bf98;
+	color: #908f8d;
 }
 
 .cards-2 .button-container {
@@ -1005,9 +1005,9 @@ input[type='checkbox'] {
 	width: 2.25rem;
 	height: 2.25rem;
 	margin-right: 0.875rem;
-	border: 0.125rem solid #14bf98;
+	border: 0.125rem solid #908f8d;
 	border-radius: 50%;
-	background-color: #14bf98;
+	background-color: #908f8d;
 	color: #fff;
 	font: 700 1rem/2.125rem "Montserrat", sans-serif;
 	text-align: center;
@@ -1017,14 +1017,14 @@ input[type='checkbox'] {
 }
 
 .accordion span[aria-expanded="false"] .circle-numbering {
-	border: 0.125rem solid #484a46;
+	border: 0.125rem solid #79736e;
 	background-color: transparent;
-	color: #484a46;
+	color: #79736e;
 }
 
 .accordion .item:hover span[aria-expanded="false"] .circle-numbering {
-	border: 0.125rem solid #14bf98;
-	color: #14bf98;
+	border: 0.125rem solid #908f8d;
+	color: #908f8d;
 }
 
 .accordion .accordion-title {
@@ -1032,7 +1032,7 @@ input[type='checkbox'] {
 	width: 70%;
 	margin-top: 0.125rem;
 	margin-bottom: 0.25rem;
-	color: #484a46;
+	color: #79736e;
 	font: 700 1.25rem/1.75rem "Montserrat", sans-serif;
 	vertical-align: middle;
 	cursor: pointer;
@@ -1040,11 +1040,11 @@ input[type='checkbox'] {
 }
 
 .accordion .item:hover .accordion-title {
-	color: #14bf98;
+	color: #908f8d;
 }
 
 .accordion span[aria-expanded="true"] .accordion-title {
-	color: #14bf98;
+	color: #908f8d;
 }
 
 .accordion .accordion-body {
@@ -1083,7 +1083,7 @@ input[type='checkbox'] {
 
 .tabs .nav-link:hover,
 .tabs .nav-link.active {
-	color: #14bf98;
+	color: #908f8d;
 }
 
 .tabs .nav-link .fas {
@@ -1098,7 +1098,7 @@ input[type='checkbox'] {
 
 .tabs #tab-1 .progress-container .title {
 	margin-bottom: 0.25rem;
-	color: #484a46;
+	color: #79736e;
 	font: 600 0.875rem/1.25rem "Open Sans", sans-serif;
 }
 
@@ -1113,7 +1113,7 @@ input[type='checkbox'] {
 	display: block;
 	padding-left: 1.5rem;
 	border-radius: 0.125rem;
-	background: linear-gradient(to bottom right, #14bf98, #1bd1a7);
+	background: linear-gradient(to bottom right, #908f8d, #1bd1a7);
 }
 
 .tabs #tab-1 .progress-bar.first {
@@ -1139,7 +1139,7 @@ input[type='checkbox'] {
 }
 
 .tabs #tab-2 .list-unstyled .media-bullet {
-	color: #14bf98;
+	color: #908f8d;
 	font-weight: 600;
 	font-size: 2rem;
 	line-height: 2rem;
@@ -1150,7 +1150,7 @@ input[type='checkbox'] {
 }
 
 .tabs #tab-3 .list-unstyled .fas {
-	color: #14bf98;
+	color: #908f8d;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1236,7 +1236,7 @@ input[type='checkbox'] {
 }
 
 .slider .testimonial-author {
-	color: #484a46;
+	color: #79736e;
 }
 
 
@@ -1263,7 +1263,7 @@ input[type='checkbox'] {
 }
 
 .form-1 .list-unstyled .fas {
-	color: #14bf98;
+	color: #908f8d;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1348,12 +1348,12 @@ input[type='checkbox'] {
 }
 
 .filter .button-group a:hover {
-	background-color: #14bf98;
+	background-color: #908f8d;
 	color: #fff;
 }
 
 .filter .button-group a.button.is-checked {
-	background-color: #14bf98;
+	background-color: #908f8d;
 	color: #fff;
 }
 
@@ -1435,7 +1435,7 @@ input[type='checkbox'] {
 	margin-bottom: 0.625rem;
 	margin-left: 0;
 	border: none;
-	background-color: #14bf98;
+	background-color: #908f8d;
 }
 
 .lightbox-basic h6 {
@@ -1469,7 +1469,7 @@ input[type='checkbox'] {
 	width: auto;
 	height: auto;
 	margin-right: 0.5rem;
-	color: #484a46;
+	color: #79736e;
 	opacity: 1;
 }
 
@@ -1532,7 +1532,7 @@ input[type='checkbox'] {
 
 .basic-2 .team-member .job-title {
 	margin-bottom: 0.75rem;
-	color: #484a46;
+	color: #79736e;
 	font: 700 1rem/1.375rem "Montserrat", sans-serif;
 }
 
@@ -1566,7 +1566,7 @@ input[type='checkbox'] {
 }
 
 .basic-2 .fa-stack:hover .fa-stack-1x {
-	color: #14bf98;
+	color: #908f8d;
 }
 
 
@@ -1599,7 +1599,7 @@ input[type='checkbox'] {
 }
 
 .counter .list-unstyled .fas {
-	color: #14bf98;
+	color: #908f8d;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1621,7 +1621,7 @@ input[type='checkbox'] {
 .counter #counter .counter-value {
 	display: inline-block;
 	margin-bottom: 0.125rem;
-	color: #14bf98;
+	color: #908f8d;
 	font: 700 2.875rem/3.25rem "Montserrat", sans-serif;
 	vertical-align: middle;
 }
@@ -1666,7 +1666,7 @@ input[type='checkbox'] {
 .form-2 .list-unstyled .fab {
 	margin-right: 0.5rem;
 	font-size: 0.875rem;
-	color: #14bf98;
+	color: #908f8d;
 }
 
 .form-2 .list-unstyled .fa-phone {
@@ -1707,7 +1707,7 @@ input[type='checkbox'] {
 }
 
 .form-2 .fa-stack:hover .fa-stack-1x {
-	color: #14bf98;
+	color: #908f8d;
 }
 
 
@@ -1758,7 +1758,7 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
-	background: #14bf98 url("../images/up-arrow.png") no-repeat center 47%;
+	background: #908f8d url("../images/up-arrow.png") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
@@ -1815,7 +1815,7 @@ a:hover.back-to-top {
 }
 
 .ex-basic-2 .list-unstyled .fas {
-	color: #14bf98;
+	color: #908f8d;
 	font-size: 0.5rem;
 	line-height: 1.375rem;
 }
@@ -1870,7 +1870,7 @@ a:hover.back-to-top {
 	
 	.navbar-custom .nav-item .nav-link:hover,
 	.navbar-custom .nav-item .nav-link.active {
-		color: #14bf98;
+		color: #908f8d;
 	}
 
 	.navbar-custom.top-nav-collapse {
@@ -1889,7 +1889,7 @@ a:hover.back-to-top {
 	
 	.navbar-custom.top-nav-collapse .nav-item .nav-link:hover,
 	.navbar-custom.top-nav-collapse .nav-item .nav-link.active {
-		color: #14bf98;
+		color: #908f8d;
 	}
 
 	.navbar-custom .dropdown-menu {
@@ -2061,7 +2061,7 @@ a:hover.back-to-top {
 	}
 
 	.navbar-custom .fa-stack:hover .fa-stack-1x {
-		color: #14bf98;
+		color: #908f8d;
 	}
 	/* end of navigation */
 
